<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:clickable="true"
		android:focusable="true"
		android:foreground="?android:attr/selectableItemBackground"
		app:cardCornerRadius="@dimen/value_5"
		app:cardElevation="@dimen/value_2">
	
	<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/value_10">
		
		<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				app:showDividers="middle"
				app:dividerPadding="@dimen/value_5"
				app:divider="@drawable/divider_vertical_line">
			
			<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/value_10"
					android:layout_weight="0.6"
					android:orientation="vertical">
				
				<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/nameText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="2"
						android:text="@string/app_name"
						android:textColor="@color/black_a87"
						android:textSize="@dimen/text_24"
						android:textStyle="bold" />
				
				<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/unitText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="1"
						android:text="@string/app_name"
						android:textColor="@color/black_a38"
						android:textSize="@dimen/text_12" />
			</androidx.appcompat.widget.LinearLayoutCompat>
			
			<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/value_10"
					android:layout_weight="0.4"
					android:gravity="center_vertical"
					android:orientation="horizontal">
				
				<androidx.appcompat.widget.AppCompatImageView
						android:id="@+id/tempIcon"
						android:layout_width="@dimen/value_50"
						android:layout_height="@dimen/value_50"
						app:srcCompat="@mipmap/ic_launcher" />
				
				<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/tempText"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/value_10"
						android:text="@string/app_name"
						android:textColor="@color/black_a87"
						android:textSize="@dimen/text_20" />
			</androidx.appcompat.widget.LinearLayoutCompat>
		</androidx.appcompat.widget.LinearLayoutCompat>
		
		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/descriptionText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/value_20"
				android:text="@string/feels_like"
				android:textColor="@color/black_a87"
				android:textStyle="bold" />
		
		<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/value_10"
				android:gravity="center_vertical"
				android:orientation="horizontal">
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/minTempText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/min_temp"
					android:textColor="@color/black_a38" />
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/maxTempText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/max_temp"
					android:textColor="@color/black_a38" />
		</androidx.appcompat.widget.LinearLayoutCompat>
		
		<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/value_10"
				android:gravity="center_vertical"
				android:orientation="horizontal">
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/pressureText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/pressure"
					android:textColor="@color/black_a38" />
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/humidityText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/humidity"
					android:textColor="@color/black_a38" />
		</androidx.appcompat.widget.LinearLayoutCompat>
		
		<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/value_10"
				android:gravity="center_vertical"
				android:orientation="horizontal">
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/windSpeedText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/wind_speed"
					android:textColor="@color/black_a38" />
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/cloudsText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/clouds"
					android:textColor="@color/black_a38" />
		</androidx.appcompat.widget.LinearLayoutCompat>
		
		<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/value_10"
				android:gravity="center_vertical"
				android:orientation="horizontal">
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/rainText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/rain"
					android:textColor="@color/black_a38" />
			
			<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/visibilityText"
					android:layout_width="@dimen/value_0"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/visibility"
					android:textColor="@color/black_a38" />
		</androidx.appcompat.widget.LinearLayoutCompat>
	</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
